Fixed spacing in comments

--- a/client/src/pages/Bid/Bid.scss
+++ b/client/src/pages/Bid/Bid.scss
@@ -174,7 +174,6 @@
       .title {
         font-size: 25px;
         font-weight: 600;
-        margin-bottom: 30px;
       }
 
       .form {
@@ -224,7 +223,7 @@
 
       .comments {
         .comment {
-          margin-bottom: 30px;
+          margin-top: 15px;
 
           .user-profile {
             display: flex;
